--- a/UdpNatPunchClient/Styles.xaml
+++ b/UdpNatPunchClient/Styles.xaml
@@ -18,6 +18,10 @@
         <Setter Property="TextWrapping" Value="Wrap"/>
     </Style>
 
+    <Style TargetType="TextBlock" x:Key="TitleTextBlock" BasedOn="{StaticResource BaseTextBlock}">
+        <Setter Property="FontSize" Value="18"/>
+    </Style>
+    
     <Style TargetType="TextBlock" x:Key="MessageDateTextBlock" BasedOn="{StaticResource BaseTextBlock}">
         <Setter Property="FontStyle" Value="Oblique"/>
     </Style>
@@ -64,4 +68,25 @@
         <Setter Property="Margin" Value="2"/>
     </Style>
 
+    <Style x:Key="RectangleStyle" TargetType="Rectangle">
+        <Setter Property="Width" Value="8"/>
+        <Setter Property="Height" Value="8"/>
+        <Setter Property="Fill" Value="Black"/>
+        <Setter Property="Margin" Value="6, 0, 6, 0"/>
+    </Style>
+
+    <Style x:Key="ProfilePictureBorderStyle" TargetType="Border">
+        <Setter Property="Width" Value="100"/>
+        <Setter Property="Height" Value="100"/>
+        <Setter Property="BorderBrush" Value="Black"/>
+        <Setter Property="BorderThickness" Value="2"/>
+        <Setter Property="Margin" Value="2"/>
+        <Setter Property="CornerRadius" Value="5"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+    </Style>
+
+    <Style x:Key="ProfilePictureStyle" TargetType="Image">
+        <Setter Property="Stretch" Value="Fill"/>
+    </Style>
+    
 </ResourceDictionary>
