--- a/UdpNatPunchClient/Styles.xaml
+++ b/UdpNatPunchClient/Styles.xaml
@@ -48,6 +48,11 @@
         <Setter Property="TextAlignment" Value="Left"/>
     </Style>
 
+    <Style TargetType="TextBox" x:Key="IncomingMessageTextBox" BasedOn="{StaticResource BaseTextBox}">
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="IsReadOnly" Value="True"/>
+    </Style>
+    
     <Style TargetType="TextBox" x:Key="MessageTextBox" BasedOn="{StaticResource BaseTextBox}">
         <Setter Property="AcceptsReturn" Value="True"/>
         <Setter Property="AcceptsTab" Value="True"/>
@@ -81,10 +86,15 @@
         <Setter Property="BorderBrush" Value="Black"/>
         <Setter Property="BorderThickness" Value="2"/>
         <Setter Property="Margin" Value="2"/>
-        <Setter Property="CornerRadius" Value="5"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
     </Style>
 
+    <Style x:Key="PeerPictureBorderStyle" TargetType="Border" BasedOn="{StaticResource ProfilePictureBorderStyle}">
+        <Setter Property="Width" Value="70"/>
+        <Setter Property="Height" Value="70"/>
+        <Setter Property="BorderThickness" Value="1"/>
+    </Style>
+    
     <Style x:Key="ProfilePictureStyle" TargetType="Image">
         <Setter Property="Stretch" Value="Fill"/>
     </Style>
