--- a/UdpNatPunchClient/ImageShowcase/ImageShowcaseWindow.xaml
+++ b/UdpNatPunchClient/ImageShowcase/ImageShowcaseWindow.xaml
@@ -6,7 +6,7 @@
         mc:Ignorable="d"
         Title="ImageShowcaseWindow" 
         Height="450" 
-        Width="800"
+        Width="600"
         WindowStyle="None"
         AllowsTransparency="True"
         WindowState="Maximized"
@@ -16,11 +16,40 @@
         <SolidColorBrush Opacity="0.5" Color="Black"/>
     </Window.Background>
     <Grid>
-        <Image
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Border
+            x:Name="ImageBorder"
+            Visibility="Visible"
+            Grid.ColumnSpan="3"
+            Grid.RowSpan="3"
             HorizontalAlignment="Center"
             VerticalAlignment="Center"
-            x:Name="DisplayImage"
-            Stretch="Uniform"
-            StretchDirection="DownOnly"/>    
+            BorderThickness="1"
+            BorderBrush="Black">
+            <Image
+                x:Name="DisplayImage"
+                Stretch="Uniform"
+                StretchDirection="DownOnly"/>
+        </Border>
+        <TextBlock
+            x:Name="ErrorTextBlock"
+            Visibility="Hidden"
+            Grid.ColumnSpan="3"
+            Grid.RowSpan="3"
+            Text="Error: can't load image"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            FontSize="18"
+            Background="Transparent"
+            Foreground="LightGray"/>
     </Grid>
 </Window>
